# TrustTunnelClientForWindows

./: .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  GETTING-STARTED.md  Makefile  README.md  ROADMAP.md  SECURITY.md  TESTING.md  build_client.bat  build_log.txt  conandata.yml  conanfile.py  skills-lock.json
.claude/instructions/: server-panel-v2.md
.devcontainer/: devcontainer.json.example
.github/workflows/: frontend.yml  lint-rust.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v3.0-MILESTONE-AUDIT.md
.planning/milestones/: v2.5.0-MILESTONE-AUDIT.md  v2.5.0-REQUIREMENTS.md  v2.5.0-ROADMAP.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md
.planning/phases/01-connectivity-bypass/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/01-infrastructure-release-setup/: 01-03-SUMMARY.md  01-04-SUMMARY.md
.planning/phases/02-ssh-port-change-core-engine/: 02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-05-PLAN.md  (+5 more)
.planning/reports/: MILESTONE_SUMMARY-v3.0.md
TrustTunnel-v1.1.0-portable-win64/: trusttunnel_client.toml
TrustTunnel-v1.2.1-portable-win64/: exclusions.json  trusttunnel_client.toml
bamboo-specs/: bamboo.yaml  run-live-integration-tests.yaml  run-live-unit-tests.yaml
cmake/: add_live_test.cmake
common/: CMakeLists.txt
core/: CMakeLists.txt
core/src/: dns_handler.cpp  dns_handler.h  dns_proxy_accessor.cpp  domain_extractor.cpp  http2_upstream.cpp  http3_upstream.cpp  tunnel.cpp  vpn_client.cpp  vpn_connection.cpp  vpn_dns_resolver.cpp  vpn_manager.cpp
core/test/: test_domain_extractor.cpp
gui-app/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
gui-app/.storybook/: main.ts  preview.ts  storybook-overrides.css
gui-app/src/: App.test.tsx  App.tsx  index.css  main.test.tsx  main.tsx  tray-menu.tsx
gui-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  trusttunnel-gui.exe.manifest
gui-app/src-tauri/capabilities/: default.json
gui-app/src-tauri/icons/: icon.icns
gui-app/src-tauri/nsis/: English.nsh  Russian.nsh  installer-hooks.nsh
gui-app/src-tauri/src/: connectivity.rs  geodata.rs  geodata_v2ray.rs  lib.rs  logging.rs  main.rs  routing_rules.rs  sidecar.rs  ssh_deploy.rs  tray.rs
gui-app/src-tauri/src/commands/: activity_log.rs  config.rs  deeplink.rs  geoip.rs  history.rs  mod.rs  protocol.rs  ssh_commands.rs  updater.rs  vpn.rs
gui-app/src-tauri/src/ssh/: deploy.rs  mod.rs  pool.rs  process.rs  sanitize.rs  server.rs
gui-app/src-tauri/src/ssh/server/: cert_probe.rs  mod.rs  server_bbr.rs  server_config.rs  server_install.rs  server_lifecycle.rs  server_monitoring.rs  server_mtproto.rs  server_rules.rs  server_security.rs  server_speedtest.rs  server_uptime.rs  server_version.rs  tlv_encoder.rs  users_advanced.rs
gui-light/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
gui-light/src/: App.tsx  index.css  main.tsx
gui-light/src-tauri/: Cargo.toml  tauri.conf.json
gui-light/src-tauri/nsis/: English.nsh  installer-hooks.nsh
gui-light/src-tauri/src/: connectivity.rs  diagnostics.rs  geodata.rs  geodata_v2ray.rs  lib.rs  logging.rs  processes.rs  routing_rules.rs  sidecar.rs  ssh_deploy.rs
gui-light/src-tauri/src/commands/: config.rs  deeplink.rs  mod.rs  updater.rs
gui-pro/: .gitignore  README.md  package-lock.json  package.json  skills-lock.json  tailwind.config.js  tray-menu.html
gui-pro/.storybook/: main.ts  storybook-overrides.css
gui-pro/src/: App.test.tsx  App.tsx  index.css  main.tsx  tray-menu.tsx
gui-pro/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
installer/: .gitignore  Cargo.toml  build.rs
installer/assets/: installer.exe.manifest  installer.rc
installer/src/: gui.rs  install.rs  main.rs  uninstall.rs
integration-tests/: docker_run_tests.sh
memory/: INDEX.md  security-posture.md
memory/decisions/: v3-design-guidelines.md
memory/reference/: architecture.md  frontend.md  rust-backend.md
memory/v3/: control-panel.md
net/: CMakeLists.txt
net/src/: os_tunnel.cpp  os_tunnel_win.cpp  os_tunnel_win.h  utils.cpp
net/test/: mock_ping_sockets.h  test_locations_pinger.cpp  test_locations_pinger_offline.cpp  test_locations_pinger_runner.cpp  test_locations_pinger_runner_offline.cpp  test_ping.cpp  test_ping_offline.cpp
platform/apple/: TrustTunnelClient.podspec
scripts/: bootstrap_conan_deps.py  gen-brand-icon.py  install.sh
tcpip/src/: ip_hooks.cpp
trusttunnel/: CMakeLists.txt  README.md  trusttunnel_client.rc
trusttunnel/deeplink-ffi/: Cargo.toml
trusttunnel/settings/: Cargo.toml
trusttunnel/setup_wizard/: Cargo.toml
trusttunnel/src/: auto_network_monitor.cpp  client.cpp  config.cpp  connection_info.cpp  trusttunnel_client.cpp
(+814 files in other folders)
