[package]
name = "trusttunnel-installer"
version = "2.2.0"
edition = "2021"
description = "TrustTunnel VPN Client Installer"
authors = ["Alex Bond"]

[[bin]]
name = "trusttunnel-installer"
path = "src/main.rs"

[dependencies]
zip = "2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Security",
]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
