[package]
name = "trusttunnel-gui"
version = "1.1.0"
description = "TrustTunnel VPN GUI Client"
authors = ["you"]
edition = "2021"

[lib]
name = "trusttunnel_gui_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"
toml = "0.8"
toml_edit = "0.22"
tauri-plugin-single-instance = "2.4.0"
reqwest = { version = "0.13.2", features = ["default-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
