[package]
name = "trusttunnel"
version = "1.3.1"
description = "TrustTunnel VPN Client"
authors = ["Alex Bond"]
edition = "2021"

[lib]
name = "trusttunnel_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"
toml = "0.8"
toml_edit = "0.22"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-notification = "2"
reqwest = { version = "0.13.2", features = ["default-tls", "stream"] }
tokio-stream = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
