[package]
name = "trusttunnel-light"
version = "2.1.0"
description = "TrustTunnel Light VPN Client"
authors = ["Alex Bond"]
edition = "2021"

[lib]
name = "trusttunnel_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
toml_edit = "0.22"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-notification = "2"
reqwest = { version = "0.13.2", features = ["default-tls", "stream", "json"] }
tokio-stream = "0.1"
notify = { version = "7", features = ["macos_fsevent"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
trusttunnel-settings = { path = "../../trusttunnel/settings" }
futures-util = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
